BE: endpoints for area & points
